--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Twitter Analytics Tool</title>
+
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7],
+          ['Fuck', 	  12]
+        ]);
+
+        var options = {
+          title: 'Najkorišteniji jezici u kolekciji'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+    </script>
 </head>
 <body>
 	Ovo je poruka od dokumenta index.html <br>
-	Broj zapisa u bazi: {{ broj_zapisa }} <br>
-	Jezici u kolekciji : {{ svi_jezici }}
+	Broj zapisa u bazi: {{ collection_number }} <br>
+	Jezici u kolekciji : {{ languages }} <br>
+
+	<div id="piechart" style="width: 900px; height: 500px;"></div>
 
 </body>
 </html>
