--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,6 @@
       google.charts.load("current", {packages:["corechart"]});
       google.charts.setOnLoadCallback(drawChart);
 
-      
-      /* var podaci = [['lol', 'lol'], ['en', 1207], ['und', 34], ['tl', 11], ['nl', 7], ['pt', 7], ['es', 6], ['ja', 6], ['fr', 4], ['in', 4], ['ro', 4], ['it', 3], ['th', 3], ['ar', 2], ['de', 2], ['ru', 2], ['cs', 1], ['da', 1], ['el', 1], ['fi', 1], ['hi', 1], ['ht', 1], ['lv', 1]] */
-
       //var podaci = {{ languages }};
       
       function drawChart() {
@@ -24,10 +21,12 @@
     </script>
   </head>
   <body>
-    Ovo je poruka od dokumenta index.html <br>
     Broj zapisa u bazi: {{ collection_number }} <br>
-    Jezici u kolekciji : {{ languages }} <br>
+    <!-- Jezici u kolekciji : {{ languages }} <br> -->
+    <input type="button" onclick="location.href='/geo';" value="GEO" />
 
     <div id="piechart_3d" style="width: 900px; height: 500px;"></div>
+
+    <div id="regions_div" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
